# unibo_08574_progetto

./: CMakeLists.txt  TUTORIAL.md
machines/: config_machine.json  term0.uriscv
os/: CMakeLists.txt
os/include/arch/: devices.h  processor.h
os/include/os/: const.h  ctypes.h  util.h  util_impl.h
os/src/: asl.c  init.c  scheduler.c  syscall.c  util.c
phase1/: CMakeLists.txt
phase1/src/: p1test.c
phase2/: CMakeLists.txt
phase2/src/: devices.c  exception.c  main.c  processor.c  semaphores.c
phase3/: CMakeLists.txt
phase3/include/support/: test.h
phase3/src/: pager.c  storage.c  support.c  test.c
phase3/test/: Makefile  fibEight.c  fibEight.uriscv  fibEleven.c  fibEleven.uriscv  print.c  printerTest.c  printerTest.uriscv  strConcat.c  strConcat.uriscv  terminalReader.c  terminalTest2.c  terminalTest2.uriscv  terminalTest3.c  terminalTest3.uriscv  terminalTest4.c  terminalTest4.uriscv  terminalTest5.c  terminalTest5.uriscv
test/: CMakeLists.txt
